# llm-eval-hub

./: pyproject.toml
src/: main.py
src/evaluation/: azure.py  bedrock.py  bison.py  google.py  metrics.py  opensource.py  semantic_search.py
src/models/: embeddings.py
src/utils/: file_handler.py  logger.py  oauth_utils.py
