[tool.poetry]
name = "llm-eval-hub"
version = "0.1.0"
description = ""
authors = ["I552839 <amaranatha.reddy.gowni@sap.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = "^0.31.0"
transformers = "^4.45.1"
evaluate = "^0.4.3"
sentence-transformers = "^3.1.1"
scikit-learn = "^1.5.2"
cachetools = "^5.5.0"
nltk = "^3.9.1"
rouge-score = "^0.1.2"
bert-score = "^0.3.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
